# Qt_thread

./: CMakeLists.txt  README.md
Receiver/: CMakeLists.txt  main.cpp  receiver.ui
Receiver/include/: receiver.h  serial_receive.h  tcp_server.h  udp_server.h
Receiver/src/: receiver.cpp  serial_receive.cpp  tcp_server.cpp  udp_server.cpp
Sender/: CMakeLists.txt  main.cpp  sender.ui
Sender/build-widget-Desktop_Qt_5_12_12_GCC_64bit-Debug/: CMakeCache.txt  DataSendWidget  Makefile  cmake_install.cmake  qtcsettings.cmake  ui_datasendwidget.h
Sender/build-widget-Desktop_Qt_5_12_12_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-9c2636d0225ec9af4d91.json  cmakeFiles-v1-1df06721e3f48d3adb03.json  codemodel-v2-28124e3f3747786031a7.json  index-2024-10-05T19-39-35-0005.json  target-DataSendWidget-Debug-446dc7bc20e13c7807d6.json  target-DataSendWidget_autogen-Debug-f051d1d7d33f7719df27.json
Sender/build-widget-Desktop_Qt_5_12_12_GCC_64bit-Debug/DataSendWidget_autogen/: mocs_compilation.cpp
Sender/build-widget-Desktop_Qt_5_12_12_GCC_64bit-Debug/DataSendWidget_autogen/6YEA5652QU/: moc_datasendwidget.cpp
Sender/include/: sender.h  serial_send.h  tcp_client.h  udp_client.h
Sender/src/: sender.cpp  serial_send.cpp  tcp_client.cpp  udp_client.cpp
Sender/widget/: CMakeLists.txt  datasendwidget.ui  main.cpp
Sender/widget/include/: datasendwidget.h
Sender/widget/src/: datasendwidget.cpp
src_lib/asio/include/asio/ip/: tcp.hpp
